--- a/.github/workflows/miniconda_debian_ci.yml
+++ b/.github/workflows/miniconda_debian_ci.yml
@@ -18,12 +18,15 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
-      - name: Login to DockerHub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags')
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@8b842e721d38d18bea23b57f4c040e53331f4ca2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          images: continuumio/miniconda3
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=match,pattern=miniconda3-v(.*),group=1
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480
@@ -37,16 +40,6 @@ jobs:
           version: latest
           driver-opts: network=host
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@8b842e721d38d18bea23b57f4c040e53331f4ca2
-        with:
-          images: continuumio/miniconda3
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=match,pattern=miniconda3-v(.*),group=1
-
       - name: build miniconda3/debian
         uses: docker/build-push-action@1bc1040caef9e604eb543693ba89b5bf4fc80935
         with:
@@ -55,4 +48,4 @@ jobs:
           file: ./miniconda3/debian/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
-          push: ${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags') }}
+          push: False
